--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "multiparty": "^4.2.2",
         "qs": "^6.9.6",
         "random-bytes": "^1.0.0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "react": "17",
+        "react-dom": "17",
         "shadow-cljs": "^2.11.18",
         "simple-encryptor": "^4.0.0",
         "xregexp": "^5.0.1"
